2008-11-05  Stefan Kost  <ensonic@users.sf.net>

	patch by: Peter Kjellerstedt <pkj@axis.com>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Correct check for existance of gtkdoc-rebase (better fix than the
	  previous one #508897). Fixes #559281.

2008-10-27  Stefan Kost  <ensonic@users.sf.net>

	patch by: Christian Persch <chpe@gnome.org>

	* gtkdoc-scangobj.in:
	  Fix doc build when using GTK_DISABLE_SINGLE_INCLUDES. Fixes #558082.

2008-10-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* devhelp2.xsd:
	  More docs and planning.

2008-10-20  Stefan Kost  <ensonic@users.sf.net>

	* tests/annotations/docs/tester-docs.xml:
	* tests/annotations/src/tester.c:
	* tests/gobject/docs/tester-docs.xml:
	  Update annotations. Glossary enhancements.

2008-10-19  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Update and document format.

2008-10-17  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	* devhelp2.xsl:
	  Add new language attribute and use "c" here.

2008-10-16  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mktmpl.in:
	  Small comment cleanup and loud thinking in TODO :)

2008-10-15  Stefan Kost  <ensonic@users.sf.net>

	patch by: Jeffrey Stedfast <fejj@novell.com>

	* examples/Makefile.am:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	   Allow versioned TARGET_DIR. Fixes #554718.

2008-10-13  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  planning.

	* doc/gtkdoc.dot:
	  Document workflow
	* devhelp2.xsl:
	  Add support for enums/flags in devhelp index.

	* gtkdoc-mkdb.in:
	  Support annotations. Fix missing roles.

	* tests/annotations/docs/tester-docs.xml:
	* tests/annotations/src/tester.c:
	* tests/annotations/src/tester.h:
	* tests/bugs/docs/tester-sections.txt:
	* tests/gobject/docs/tester-docs.xml:
	  Update new syntax.

2008-10-11  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* tests/Makefile.am:
	* tests/annotations.sh:
	* tests/annotations/Makefile.am: