@@ -1,3 +1,12 @@
+2008-11-06  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	  Get rid of german variable name. Generate glossary xml for 
+	  annotations. Improve initial master document.
+
+	* tests/annotations/docs/tester-docs.xml:
+	  Update example to include anotation glossary.
+
 2008-11-05  Stefan Kost  <ensonic@users.sf.net>
 
 	patch by: Peter Kjellerstedt <pkj@axis.com>
